updated docs for verifying and logout
